# support-agent-x

./: .gitignore  CHROMADB_SETUP.md  DATABASE_SETUP.md  DOCKER_COMPOSE_GUIDE.md  Demo.md  Demo_Script.md  Dockerfile  HACKATHON_PLAN.md  IMPLEMENTATION_STATUS.md  INSTALLATION_NOTES.md  MEMORY_AGENT_GUIDE.md  PlanAndIntentAgent.md  PlanAndIntentStatus.md  RAG_INTEGRATION.md  README.md  SETUP_COMPLETE.md  SIMPLIFIED_IMPLEMENTATION_TASKS.md  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
.venv312/: pyvenv.cfg
.venv_rag_ingest/: pyvenv.cfg
Docs/: CHROMADB_CONNECTION_TROUBLESHOOTING.md  HACKATHON_PLAN.md  OBSERVABILITY.md  OBSERVABILITY_OPTIONS.md
agents/guardrails_agent/: __init__.py  __main__.py  guardrails_agent.py  guardrails_executor.py  input_guardrail.py  llm_guardrail.py  output_guardrail.py
agents/host_agent/: __init__.py  __main__.py  host_agent.py  host_executor.py  observability.py  remote_agent_connection.py  server.py
agents/ingestion_agent/: __init__.py  __main__.py  ingestion_agent.py  ingestion_executor.py
agents/intent_agent/: __main__.py  intent_agent.py  intent_executor.py
agents/memory_agent/: __init__.py  __main__.py  mem0_config.py  memory_agent.py  memory_db.py  memory_schema.py  memory_tools.py
agents/memory_agent/scripts/: init_memory_db.py
agents/planner_agent/: __main__.py  planner_agent.py  planner_executor.py
agents/rag_agent/: __main__.py  agent.py  agent_executor.py  rag.py
agents/reasoning_agent/: __main__.py  reasoning_agent.py  reasoning_executor.py
agents/response_agent/: __init__.py  __main__.py  response_agent.py  response_executor.py
database/: connection.py  models.py  schema.py  services.py
database/migrations/: env.py
database/migrations/versions/: 001_initial_schema.py
infra-automation/: validate-terraform.sh
infra-automation/components/: .gitignore
infra-automation/components/alb/: backend.tf  main.tf  outputs.tf  providers.tf  terraform.tfvars  variables.tf
infra-automation/components/cloudfront/: backend.tf  terraform.tfvars  variables.tf
infra-automation/components/ec2/: backend.tf  main.tf  outputs.tf  providers.tf  terraform.tfvars  variables.tf
infra-automation/components/ecr/: backend.tf  main.tf  outputs.tf  terraform.tfvars  variables.tf
infra-automation/components/iam/: backend.tf  main.tf  outputs.tf  terraform.tfvars  variables.tf
infra-automation/components/rds/: backend.tf  main.tf  outputs.tf  terraform.tfvars  variables.tf
infra-automation/components/s3_bucket/: backend.tf  main.tf  outputs.tf  terraform.tfvars  variables.tf
infra-automation/modules/alb/: main.tf  (+2 more)
mock/: server.py
react-ui/: .env.example  README.md  index.html  package-lock.json  package.json
react-ui/src/: App.tsx  index.css
scripts/: ingest_rag_data.py  init_db.py  requirements-rag-ingest.txt  seed_mem0_past_incidents.py  seed_memory_episodic.py  start_all_agents.sh
testing-docs/: README.md  TEST_CASES.md
tests/: test_database.py  test_memory_integration.py
training-docs/: README.md
training-docs/faqs/: ecommerce-faq.md
training-docs/memory-agent-scenarios/: README.md  past-resolved-incidents.json
training-docs/policies/: account-security-policy.md  order-cancellation-policy.md  payment-policy.md  returns-refund-policy.md  shipping-delivery-policy.md
ui/: main.py
ui/components/: ticket_form.py
ui/pages/: support_chat.py
(+44 files in other folders)
