[project]
name = "support-agents"
version = "0.1.0"
description = "Collaborative multi-agent support system with RAG, memory, and guardrails"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "a2a-sdk>=0.3.0",
    "google-adk>=1.7.0",
    "langchain>=0.3.0",
    "langchain-google-genai>=2.1.5",
    "langgraph>=0.4.5",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "pypdf2>=3.0.0",
    "python-docx>=1.1.0",
    "python-pptx>=1.0.0",
    "pillow>=10.0.0",
    "pytesseract>=0.3.10",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.9",
    "uvicorn>=0.27.0",
    "fastapi>=0.109.0",
    "mesop>=0.1.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "click>=8.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ['py313']

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
