[project]
name = "support-agents"
version = "0.1.0"
description = "Collaborative multi-agent support system with RAG, memory, and guardrails"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Core A2A and ADK dependencies
    "a2a-sdk>=0.3.0",
    "google-adk[extensions]>=1.7.0",
    # Database
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.9",
    # Web server
    "uvicorn>=0.27.0",
    "gunicorn>=21.0.0",
    "fastapi>=0.109.0",
    # UI
    "mesop>=0.1.0",
    # HTTP client
    "httpx>=0.27.0",
    # Utilities
    "python-dotenv>=1.0.0",
    "click>=8.2.0",
    # Memory (mem0) - uses ChromaDB from RAG dependencies
    "mem0ai>=0.1.0",
    "openai>=1.0.0",
    # Observability
    "langfuse>=3.0.0",
    "chromadb>=1.1.1",
    # LLM guardrail (uses same LITELLM_MODEL / API keys as agents)
    "litellm>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]
rag = [
    # RAG dependencies for future RAG agent implementation
    # Install with: pip install -e ".[rag]"
    # Note: chromadb requires onnxruntime which may not be available for Python 3.14
    # ChromaDB conflicts with Pydantic 2.10+ (a2a-sdk/mcp need pydantic>=2.11).
    # For ingest_rag_data.py only: use a separate venv with scripts/requirements-rag-ingest.txt
    "pydantic-settings>=2.0.0",
    "langchain>=0.3.0",
    "langchain-google-genai>=2.1.5",
    "langgraph>=0.4.5",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "pypdf2>=3.0.0",
    "python-docx>=1.1.0",
    "python-pptx>=1.0.0",
    "pillow>=10.0.0",
    "pytesseract>=0.3.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agents", "database", "data", "monitoring", "scripts", "ui", "utils"]

[tool.black]
line-length = 100
target-version = ['py313']

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
